fix: layout bug fixed

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,4 +1,3 @@
 .app-container{
     background: rgb(30,34,43);
-    padding: 0px !important;
 }
